# sqrl-protocol

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: client_request.rs  error.rs  lib.rs  protocol_version.rs  server_response.rs
