[package]
name = "sqrl-protocol"
version = "0.1.2"
description = "An rust implementation of the protocol for Secure Quick Reliable Login (SQRL)"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/thechrisjohnson/sqrl-protocol"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
ed25519-dalek = "2.1.1"
url = "2.5.0"

[dev-dependencies]
rand = "0.8.5"
